--- a/css/style.css
+++ b/css/style.css
@@ -2463,7 +2463,13 @@ output {
   color: #b988b9;
   text-transform: uppercase;
   border:none;
+  padding:0px;
 }
+.darktransparent h4{
+  color:#d7d7d7;
+  font-size: 20px;
+}
+
 .darktransparent p{
   color: #fff;
 }
@@ -10369,17 +10375,18 @@ h2,
 
 h3,
 .h3 {
-  font-size: 28px;
+  font-size: 20px;
   line-height: 1.5;
   letter-spacing: 0.03em;
   font-family: "Quicksand", sans-serif;
-  text-transform: uppercase;
+  color: #73308b;
+  margin-bottom: 20px;
 }
 
 @media (min-width: 768px) {
   h3,
   .h3 {
-    font-size: 44px;
+    font-size: 24px;
   }
 }
 
@@ -10387,7 +10394,8 @@ h3,
   h3,
   .h3 {
     line-height: 1.13043;
-    font-size: 46px;
+    font-size: 26px;
+    margin-bottom:30px;
   }
 }
 
@@ -10417,6 +10425,13 @@ h5,
   font-size: 20px;
   line-height: 1.5;
 }
+h5 > a {
+  color:#b988b9;
+}
+h5 > a:hover {
+  color:#d7d7d7;
+  padding:15px 5px 15px 0;
+}
 
 @media (min-width: 768px) {
   h5,
@@ -10445,7 +10460,6 @@ h6,
 
 h1, .h1,
 h2, .h2,
-h3, .h3,
 h4, .h4,
 h5, .h5,
 h6, .h6 {
@@ -10466,7 +10480,6 @@ h1 a:hover, .h1 a:hover,
 h2 a:hover, .h2 a:hover,
 h3 a:hover, .h3 a:hover,
 h4 a:hover, .h4 a:hover,
-h5 a:hover, .h5 a:hover,
 h6 a:hover, .h6 a:hover {
   color: #434445;
 }
@@ -11515,7 +11528,7 @@ footer .btn-java:hover {
 /** 2.9  Buttons Addons */
 .btn {
   position: relative;
-  padding: 7px 35px;
+  padding: 5px 10px;
   font-size: 14px;
   line-height: 24px;
   border-radius: 3px;
@@ -11529,6 +11542,11 @@ footer .btn-java:hover {
   font-weight: 400;
   transition: .3s;
   backface-visibility: hidden;
+}
+@media (min-width: 480px){
+  .btn {
+    padding: 7px 35px;
+  }
 }
 
 .btn:focus, .btn:active, .btn:active:focus {
@@ -29585,11 +29603,11 @@ h1 + * {
 }
 
 h2 + * {
-  margin-top: 33px;
+  margin-top: 16px;
 }
 
 h3 + * {
-  margin-top: 27px;
+  margin-top: 18px;
 }
 
 h4 + * {
@@ -29617,7 +29635,7 @@ img + p {
 }
 
 p + h5 {
-  margin-top: 38px;
+  margin-top: 20px;
 }
 
 h3 + .text-extra-big {
