--- a/css/style.css
+++ b/css/style.css
@@ -4859,7 +4859,7 @@ tbody.collapse.in {
   position: relative;
   display: block;
   padding: 10px 18px;
-  margin:7px;
+  margin:0 0 7px 0;
 }
 
 .nav > li > a:hover, .nav > li > a:focus {
@@ -4922,13 +4922,39 @@ tbody.collapse.in {
   border-bottom-color: transparent;
   cursor: default;
 }
-
-.nav-pills > li {
-  float: left;
+.nav-pills > li > a {
+  border-radius: 3px 3px 3px 3px;
+  text-align: center;
+  float:left;
+  border:1px solid #73308b;
+  margin-right:10px;
+  }
+.procedure-nav{
+  padding-right:15px;
+}
+.procedure-content{
+  padding-left:15px;
+  border-left:none;
+  margin-top:20px;
 }
 
+
+@media(min-width: 992px){
 .nav-pills > li > a {
-  border-radius: 3px;
+  border-radius: 3px 0 0 3px;
+  text-align: right;
+  float:none;
+  border:none;
+  margin-right: 0;
+  }
+  .procedure-nav{
+  padding-right:0;
+  }
+  .procedure-content{
+  margin-top: 0;
+  padding-left:15px;
+  border-left: 1px solid #73308b;
+  }
 }
 
 .nav-pills > li + li {
@@ -35081,7 +35107,7 @@ fieldset[disabled] .bg-primary .btn-java {
 
 .purplemediabox{
   background-color: #73308b;
-  margin-top: -70px;
+  margin-top: -90px;
   border-radius: 0px 0px 10px 10px;
   padding:10px;
   position: absolute;
