--- a/css/style.css
+++ b/css/style.css
@@ -2480,12 +2480,30 @@ output {
     margin: 0 15px;
     padding: 30px;
 }
-.advert h5, .advert p{
+.advert h5, .advert p,{
   max-width: 500px;
   background-color: rgba(215, 215, 215, 0.8);
   padding:5px 10px;
 }
-
+.cost-subtitle{
+  font-style: italic;
+  text-transform:none;
+  color:#73308b;
+}
+.cost-links a {
+  color:#b988b9;
+  display: block;
+}
+.cost-links a:hover {
+  color:#fff;
+  display: block;
+}
+.anchor{
+  display: block; 
+  position: relative; 
+  top: -90px; 
+  visibility: hidden;
+}
 .pinkfooter {
   background-color: #b988b9;
   padding:15px;
@@ -4859,7 +4877,7 @@ tbody.collapse.in {
   position: relative;
   display: block;
   padding: 10px 18px;
-  margin:0 0 7px 0;
+  margin:0 0 10px 0;
 }
 
 .nav > li > a:hover {
@@ -4936,8 +4954,8 @@ tbody.collapse.in {
   border:1px solid #73308b;
   margin-right:10px;
   }
-.nav-pills > li >a:last-child{
-  margin: 0px 0px 0px 0px;
+.nav-pills > li:last-child a{
+  margin: 0px;
 }
 .procedure-nav{
   padding-right:15px;
@@ -4950,8 +4968,19 @@ tbody.collapse.in {
 .gallery-img{
   margin-bottom:20px;
 }
-
+.hide-mobile{
+  display:none;
+}
+.show-mobile{
+  display:block;
+}
 @media(min-width: 992px){
+.hide-mobile{
+  display:block;
+}
+.show-mobile{
+  display:none;
+}
 .nav-pills {
   border-right:1px solid #73308b;
 }
