--- a/css/style.css
+++ b/css/style.css
@@ -24233,6 +24233,143 @@ html.lt-ie11 .btn-santos-svg:hover {
 /*# sourceMappingURL=materialdesignicons.css.map */
 /** 2.16 Thumbnail Addons */
 
+.project {
+    margin-bottom: 30px;
+    vertical-align: top;
+    margin-right: 30px;
+    float: left;
+    cursor: pointer;
+    width:100%;
+}
+
+.caption {
+  font-style: italic;
+  color:#EAEAEA;
+}
+
+.project figure {
+    position: relative;
+    display: inline-block;
+}
+
+.project figure img {
+    width: 100%;
+}
+.btn-warning bnt-action{
+    margin: 0% 0% auto;    
+}
+
+figcaption .project-details {
+    display: block;
+    font-size: 16px;
+    /*line-height: 33px;*/
+    color: #000;
+    /*height: 27px;*/
+    width: 100%;
+    margin: 0 auto 5px auto;
+    /*margin-bottom: 5px;*/
+    overflow: hidden;
+}
+.project figure:hover figcaption {
+    background:#d81e05;
+}
+.project figure:hover figcaption .project-details {
+    color: #fff;
+}
+
+figcaption .project-price {
+    position: absolute;
+    right: 15px;
+    top: 12px;
+    font-size: 22px;
+    text-align: right;
+    margin-top: 8px;
+    letter-spacing: -1px;
+    -webkit-font-smoothing: antialiased;
+}
+
+figcaption .project-creator {
+    font-size: 13px;
+    color: #545454;
+    display: block;
+}
+
+figcaption .project-creator {
+    font-size: 13px;
+    color: #545454;
+    display: block;
+}
+
+.project figure .actions button {
+    padding: 13px 20px;
+    font-size: 16px;
+    top: 32%;
+    position: absolute;
+    left: 50%;
+    width: 90%;
+    margin-left: -45%;
+    line-height: 18px;
+    letter-spacing: 1px;
+}
+
+.project figure:hover .actions ul {
+    display:inline;
+}
+
+.project figure .actions {
+    display: block;
+    position: absolute;
+    bottom: 0px;
+    top: 85%;
+    left:0;
+    right:0;
+    z-index: 1;
+    opacity: 1;
+    background-color: rgba(35,31,32,.6);
+    -ms-transition: all .4s ease-out;
+    -webkit-transition: all .4s ease-out;
+    -moz-transition: all .4s ease-out;
+    -o-transition: all .4s ease-out;
+    transition: all .4s ease-out;
+    color: white;
+    padding:2%;
+    text-align:center;
+}
+
+.btn-project{
+  width:100%;
+  max-width:384px;/** width of profile image */ 
+}
+.certifications{
+  padding:10px;
+}
+
+@media (min-width: 768px) {
+  .project figure .actions {
+    top: 84%;
+  }
+}
+
+@media (min-width: 992px) {
+  .project figure .actions {
+    top: 76%;
+    left:0;
+    right:0;
+    padding:2%;
+    
+  }
+}
+
+@media (min-width: 1200px) {
+  .project figure .actions {
+    top: 80%;
+    left:0;
+    right:0;
+    font-size:1em;
+    padding:2%;
+  }
+}
+
 .thumbnail {
   transition: .3s;
   border: none;
@@ -35451,107 +35588,6 @@ fieldset[disabled] .bg-primary .btn-java {
 .certification{
   padding:15px;
 }
-
-
-/* profile box */
-
-.iamgurdeep-pic {
-    position: relative;
-}
-.username {
-    bottom: 0;
-    color: #ffffff;
-    padding: 30px 15px 4px;
-    position: absolute;
-    width: 100%;
-    text-shadow: 1px 1px 2px #000000;
-    
-background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, #2d2c41 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%, #2d2c41 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom, rgba(0,0,0,0) 0%, #2d2c41 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a64d4d4d',GradientType=0 ); /* IE6-9 */
-}
-.iamgurdeeposahan {
-    border-radius: 4px 4px 0 0;
-}
-.username > h2 {
-    font-family: oswald;
-    font-size: 27px;
-    font-weight: lighter;
-    margin: 31px 0 4px;
-    position: relative;
-    text-shadow: 1px 1px 2px #000000;
-    text-transform: uppercase;
-}
-.username > h2 small {
-    color: #ffffff;
-    font-family: open sans;
-    font-size: 13px;
-    font-weight: 400;
-    position: relative;
-}
-.username .fa{
-    color: #ffffff;
-    font-size: 14px;
-    margin: 0 0 0 4px;
-    position: static;
-}
-.edit-pic a {
-    background: rgba(0, 0, 0, 0) none repeat scroll 0 0;
-    border: 1px solid #ffffff;
-    border-radius: 50%;
-    color: #ffffff;
-    font-size: 21px;
-    height: 39px;
-    line-height: 38px;
-    margin: 8px;
-    text-align: center;
-    width: 39px;
-    -webkit-transition: all 0.4s ease;
-    -o-transition: all 0.4s ease;
-  transition: all 0.4s ease;
-    text-decoration: none !important;
-     display: list-item;
-     background-color: rgba(255, 255, 255, 0.1)
-}
-.edit-pic a:hover {
-   font-size: 17px;
-   opacity: 0.9;
-  }
-.edit-pic a:focus {
-   background:#b63b4d;
-    color: #fff;
-    border: 1px solid #b63b4d;
-}
-a:focus {
-    outline: none;
-    outline-offset: 0px;
-}
-.edit-pic {
-    position: absolute;
-    right: 0;
-    top: 0;
-    opacity: 0;
-    -webkit-transition: all 0.4s ease;
-    -o-transition: all 0.4s ease;
-    transition: all 0.4s ease;
-}
-.tags {
-    background: rgba(255, 255, 255, 0.1) none repeat scroll 0 0;
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    border-radius: 2px;
-    display: inline-block;
-    font-size: 13px;
-    margin: 4px 0 0;
-    padding: 2px 5px;
-     -webkit-transition: all 0.4s ease;
-    -o-transition: all 0.4s ease;
-    transition: all 0.4s ease;
-}
-
-
-
-
 
 @media (min-width: 1200px) {
   .rd-navbar-sidebar-fixed .rd-navbar-nav-wrap {
